cmake_minimum_required(VERSION 4.0)
project(myc__probem_solving)

set(CMAKE_CXX_STANDARD 20)

add_executable(myc__probem_solving level1/problem1.cpp
        level1/problem2.cpp
        level1/problem3.cpp
        level1/problem4.cpp
        level1/problem5.cpp
        level1/problem6.cpp
        level1/problem7.cpp
        level1/problem8.cpp
        level1/problem9.cpp
        level1/problem10.cpp
)
