cmake_minimum_required(VERSION 4.0)
project(myc__probem_solving)

set(CMAKE_CXX_STANDARD 20)

add_executable(myc__probem_solving level1/problem1.cpp
        level1/problem2.cpp
        level1/problem3.cpp
        level1/problem4.cpp
        level1/problem5.cpp
        level1/problem6.cpp
        level1/problem7.cpp
        level1/problem8.cpp
        level1/problem9.cpp
        level1/problem10.cpp
        level1/problem11.cpp
        level1/problem12.cpp
        level1/problem13.cpp
        level1/problem14.cpp
        level1/problem15.cpp
        level1/problem16.cpp
        level1/problem17.cpp
        level1/problem18.cpp
        level1/problem19.cpp
        level1/problem20.cpp
        level1/problem21.cpp
        level1/problem22.cpp
        level1/problem23.cpp
        level1/problem24.cpp
        level1/problem25.cpp
        level1/problem26.cpp
        level1/problem27.cpp
)
